@@ -1,3 +1,4 @@
+  - Add a site-specific for www.hkcnews.com
   - Add a site-specific for www.thestandnews.com
 
 v0.17.0 2020-05-03T09:15:32+0800
